tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__quality_bar_full.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
[green]████████████████████[/] 100%
