tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__quality_bar_half.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
[yellow]██████████[/]░░░░░░░░░░ 50%
