tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__search_results_empty.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
┏━━━┳━━━━━━━┳━━━━━━━┳━━━━━━━┳━━━━━━━━━━━━━┓
┃ # ┃ Skill ┃ Score ┃ Layer ┃ Description ┃
┡━━━╇━━━━━━━╇━━━━━━━╇━━━━━━━╇━━━━━━━━━━━━━┩
└───┴───────┴───────┴───────┴─────────────┘
