tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__search_results_single.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
┏━━━┳━━━━━━━━━━━━┳━━━━━━━┳━━━━━━━━━┳━━━━━━━━━━━━━━━━━━━━━━┓
┃ # ┃ Skill      ┃ Score ┃ Layer   ┃ Description          ┃
┡━━━╇━━━━━━━━━━━━╇━━━━━━━╇━━━━━━━━━╇━━━━━━━━━━━━━━━━━━━━━━┩
│ 1 │ debug-rust │  0.95 │ project │ Debug Rust builds... │
└───┴────────────┴───────┴─────────┴──────────────────────┘
