tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__skill_detail_panel_low_quality.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
╭──────────────────────────────── Git Workflow ────────────────────────────────╮
│ Standard git workflow for feature branches                                   │
│                                                                              │
│ Layer: org  Quality: [####------] 35%                                        │
│                                                                              │
│ Tags: git, workflow                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯
