tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__skill_panel.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
╭───────────────────────────── Debug Rust Builds ──────────────────────────────╮
│ Diagnose Rust compiler errors and build failures with structured debugging s │
│                                                                              │
│ Layer: project                                                               │
╰──────────────────────────────────────────────────────────────────────────────╯
