tests/snapshots/snapshots/snapshot_tests__snapshots__rich_output_visual__success_panel_long_message.snap
---
source: tests/snapshots/rich_output_visual.rs
expression: output
---
╭───────────────────────────── ✓ Import Complete ──────────────────────────────╮
│ Successfully imported 42 skills from the organization archive into the local │
╰──────────────────────────────────────────────────────────────────────────────╯
